--- a/.travis-pgator.conf
+++ b/.travis-pgator.conf
@@ -1,10 +1,9 @@
 {
-	"sqlServers": [
-		{
-			"maxConn": 50,
-			"connString": "dbname=pgator-test user=postgres"
-		}
-	],
+	"sqlServer":
+	{
+		"maxConn": 50,
+		"connString": "dbname=pgator-test user=postgres"
+	},
 	"sqlAuthVariables": [
 		"pgator.username",
 		"pgator.password"
