--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_script:
   - psql -c 'create database "vibe-test"' -U postgres
 
 script:
-  - dub test
+  - dub test --config=integration_test -- --conninfo="dbname=vibe-test"
   - dub run --config=integration_test -- --conninfo="dbname=vibe-test"
 
   - if [ ${DC} = "dmd" ]; then dub run dscanner -- -s; fi
