--- a/.travis.yml
+++ b/.travis.yml
@@ -16,12 +16,7 @@ before_install:
 before_script:
   - psql -c 'create database "vibe-test"' -U postgres
 
-script:
-  - dub test
-  - dub run --config=integration_test -- --conninfo="dbname=vibe-test"
-
-  - if [ ${DC} = "dmd" ]; then dub run dscanner -- -s; fi
-#  - if [ ${DC} = "dmd" ]; then dub run dscanner -- -S; fi #disabled due to assertion failure in dsymbol
+script: .test.sh "dbname=vibe-test"
 
 after_success:
   - if [ ${DC} = "dmd" ]; then bash <(curl -s https://codecov.io/bash); fi
