Examples: connString option added, example.d changed to make the meaning clearer

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -118,8 +118,8 @@ jobs:
         run: |
           dub test --build=$BUILD
           dub run :integration_tests --build=$BUILD -- --conninfo="$CONN_STRING" --debug=true
-          dub build :example --build=release
-          dub build :example_pipelining
+          dub run :example --build=release -- --conninfo="$CONN_STRING"
+          dub run :example_pipelining -- --conninfo="$CONN_STRING"
           dub run doveralls
         shell: bash
       - name: Upload coverage data
